add mixins to less

--- a/src/less/style.less
+++ b/src/less/style.less
@@ -1,5 +1,16 @@
-@graybkg: #f3f3f3;
-@whitebkg: #fff;
+@import "smart-grid.less";
+@import "var.less";
+@import "fonts.less";
+@import "first.less";
+
+.reset();
+.debug {
+	.debug(rgba(0, 0, 0, 0.2), 1px solid blue);
+}
+
+.wrapper {  // центрущая обертка
+	.wrapper();
+}
 
 body {
 	background: @graybkg;
