--- a/src/less/style.less
+++ b/src/less/style.less
@@ -13,56 +13,67 @@
 }
 
 body {
-	background: @graybkg;
+	background: @whitebkg;
 }
 
-
+//FIRST SCREEN START
 .firstContainer {
-	//border: 1px solid blueviolet;
+	background-color: @graybkg;
+	border: @border;
+	-webkit-clip-path: polygon(0 0, 100% 0, 100% 82%, 0 100%);
+	clip-path: polygon(0 0, 100% 0, 100% 82%, 0 100%);
+	height: 830px;
 	&__wrap {
-		//border: 1px solid blue;
-		margin: 12px;
 		display: flex;
 		justify-content: center;
 	}
 	&__logo {
-		//border: @border;
-		margin: 12px;
+		margin-top: 25px;
 		img {
 			height: 47px;
 		}
 	}
+}
+//FIRST SCREEN END
+
+
+
+//SECOND SCREEN START
+.secondContainer {
+	height: 300px;
+	&__wrap {
+		border: @border;
+	}
 	&__gem {
-		//border: @border;
 		display: flex;
 		justify-content: center;
-		img {
-			margin-top: 250px;
-			height: 550px;
-		}
+			img {
+				height: 550px;
+				margin-top: -480px;
+				z-index: 1;
+			}
 	}
 	&__gemText {
 		display: flex;
 		justify-content: center;
 		h1 {
-			//border: @border;
-			margin-top: 23px;
-			font-size: 2.7rem;
+			font-size: 2.5rem;
 			font-family: 'Russo One', sans-serif;
+			margin-top: 25px;
 		}
 	}
-}
-
-
-.lineContainer {
-	display: flex;
-	justify-content: center;
 	&__line {
-		width: 90px;
-		margin-top: 50px;
 		hr {
-			background-color: #000000;
+			background-color: black;
 			height: 3px;
+			width: 90px;
+			margin-top: 60px;
 		}
 	}
+	&__icons {
+		border: @border;
+		height: 150px;
+	}
 }
+//SECOND SCREEN END
+
