--- a/src/less/font-awesome.less
+++ b/src/less/font-awesome.less
@@ -1,16 +1,7 @@
-/*
-@font-face {
-	font-family: 'Russo One', sans-serif;
-	src: url(./fonts/RussoOne-Regular.ttf);
-}
-*/
-
-@font-face {
-	font-family: 'Orbitron', sans-serif;
-	src: url(./fonts/Orbitron-Medium.ttf);
-}
-
-
+/*!
+ *  Font Awesome 4.7.0 by @davegandy - http://fontawesome.io - @fontawesome
+ *  License - http://fontawesome.io/license (Font: SIL OFL 1.1, CSS: MIT License)
+ */
 
 @import "variables.less";
 @import "mixins.less";
