--- a/src/less/style.less
+++ b/src/less/style.less
@@ -19,7 +19,7 @@ body {
 //FIRST SCREEN START
 .firstContainer {
 	background-color: @graybkg;
-	border: @border;
+	//border: @border;
 	-webkit-clip-path: polygon(0 0, 100% 0, 100% 82%, 0 100%);
 	clip-path: polygon(0 0, 100% 0, 100% 82%, 0 100%);
 	height: 830px;
@@ -42,7 +42,7 @@ body {
 .secondContainer {
 	height: 300px;
 	&__wrap {
-		border: @border;
+		//border: @border;
 	}
 	&__gem {
 		display: flex;
@@ -72,7 +72,79 @@ body {
 	}
 	&__icons {
 		border: @border;
-		height: 150px;
+		display: flex;
+		justify-content: center;
+		margin-top: 100px;
+	}
+	&__tree {
+		border: @border;
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		margin: 0 23px;
+		i {
+			font-size: 2.5rem;
+			margin-bottom: 30px;
+		}
+		span {
+			font-family: 'Orbitron', sans-serif;
+		}
+	}
+	&__water {
+		border: @border;
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		margin: 0 23px;
+		i {
+			font-size: 2.5rem;
+			margin-bottom: 30px;
+		}
+		span {
+
+		}
+	}
+	&__cloud {
+		border: @border;
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		margin: 0 23px;
+		i {
+			font-size: 2.5rem;
+			margin-bottom: 30px;
+		}
+		span {
+
+		}
+	}
+	&__snow {
+		border: @border;
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		margin: 0 23px;
+		i {
+			font-size: 2.5rem;
+			margin-bottom: 30px;
+		}
+		span {
+
+		}
+	}
+	&__bolt {
+		border: @border;
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		margin: 0 23px;
+		i {
+			font-size: 2.5rem;
+			margin-bottom: 30px;
+		}
+		span {
+
+		}
 	}
 }
 //SECOND SCREEN END
