--- a/src/less/style.less
+++ b/src/less/style.less
@@ -1,4 +1,5 @@
 @import "smart-grid.less";
+@import "font-awesome.css";
 @import "var.less";
 @import "fonts.less";
 @import "first.less";
@@ -19,8 +20,6 @@ body {
 //FIRST SCREEN START
 .firstContainer {
 	background-color: @graybkg;
-	//border: @border;
-	-webkit-clip-path: polygon(0 0, 100% 0, 100% 82%, 0 100%);
 	clip-path: polygon(0 0, 100% 0, 100% 82%, 0 100%);
 	height: 830px;
 	&__wrap {
@@ -82,9 +81,14 @@ body {
 		flex-direction: column;
 		align-items: center;
 		margin: 0 23px;
-		i {
+		.icon-park {
 			font-size: 2.5rem;
 			margin-bottom: 30px;
+			&:before {
+				content: "\e900";
+				font-size: 2.5rem;
+				color: black;
+			}
 		}
 		span {
 			font-family: 'Orbitron', sans-serif;
@@ -96,26 +100,33 @@ body {
 		flex-direction: column;
 		align-items: center;
 		margin: 0 23px;
-		i {
+		.icon-water {
 			font-size: 2.5rem;
 			margin-bottom: 30px;
+			&:before {
+				content: "\e901";
+			}
 		}
 		span {
-
+			font-family: 'Orbitron', sans-serif;
 		}
 	}
+
 	&__cloud {
 		border: @border;
 		display: flex;
 		flex-direction: column;
 		align-items: center;
 		margin: 0 23px;
-		i {
+		.icon-wind {
 			font-size: 2.5rem;
 			margin-bottom: 30px;
+			&:before {
+				content: "\e902";
+			}
 		}
 		span {
-
+			font-family: 'Orbitron', sans-serif;
 		}
 	}
 	&__snow {
@@ -124,12 +135,15 @@ body {
 		flex-direction: column;
 		align-items: center;
 		margin: 0 23px;
-		i {
+		.icon-height {
 			font-size: 2.5rem;
 			margin-bottom: 30px;
+			&:before {
+				content: "\e903";
+			}
 		}
 		span {
-
+			font-family: 'Orbitron', sans-serif;
 		}
 	}
 	&__bolt {
@@ -138,12 +152,15 @@ body {
 		flex-direction: column;
 		align-items: center;
 		margin: 0 23px;
-		i {
+		.icon-wings {
 			font-size: 2.5rem;
 			margin-bottom: 30px;
+			&:before {
+				content: "\e904";
+			}
 		}
 		span {
-
+			font-family: 'Orbitron', sans-serif;
 		}
 	}
 }
