--- a/src/less/style.less
+++ b/src/less/style.less
@@ -74,7 +74,8 @@ body {
 		border: @border;
 		display: flex;
 		justify-content: center;
-		margin-top: 100px;
+		margin-top: 50px;
+		font-family: 'Orbitron', sans-serif;
 	}
 	&__tree {
 		border: @border;
@@ -87,7 +88,8 @@ body {
 			margin-bottom: 30px;
 		}
 		span {
-			font-family: 'Orbitron', sans-serif;
+			//font-family: 'Orbitron', sans-serif;
+			//font-weight: bolder;
 		}
 	}
 	&__water {
@@ -146,6 +148,12 @@ body {
 
 		}
 	}
+	&__about {
+		height: 200px;
+		border: @border;
+		margin-top: 50px;
+	}
+
 }
 //SECOND SCREEN END
 
