--- a/src/less/style.less
+++ b/src/less/style.less
@@ -83,14 +83,18 @@ body {
 		flex-direction: column;
 		align-items: center;
 		margin: 0 23px;
+		/*
 		i {
 			font-size: 2.5rem;
 			margin-bottom: 30px;
 		}
+		*/
 		span {
 			//font-family: 'Orbitron', sans-serif;
+			font-family: 'icomoon';
 			//font-weight: bolder;
 		}
+
 	}
 	&__water {
 		border: @border;
