--- a/src/less/style.less
+++ b/src/less/style.less
@@ -71,91 +71,128 @@ body {
 		}
 	}
 	&__icons {
-		border: @border;
+		//border: @border;
 		display: flex;
 		justify-content: center;
-		margin-top: 50px;
+		margin-top: 100px;
 		font-family: 'Orbitron', sans-serif;
 	}
 	&__tree {
-		border: @border;
+		//border: @border;
 		display: flex;
 		flex-direction: column;
 		align-items: center;
 		margin: 0 23px;
-		/*
 		i {
-			font-size: 2.5rem;
-			margin-bottom: 30px;
-		}
-		*/
-		span {
-			//font-family: 'Orbitron', sans-serif;
 			font-family: 'icomoon';
-			//font-weight: bolder;
+			font-size: 3rem;
+		}
+		span {
+			font-size: 1rem;
+			margin-top: 25px;
 		}
 
 	}
 	&__water {
-		border: @border;
+		//border: @border;
 		display: flex;
 		flex-direction: column;
 		align-items: center;
 		margin: 0 23px;
 		i {
-			font-size: 2.5rem;
-			margin-bottom: 30px;
+			font-family: 'icomoon';
+			font-size: 3rem;
 		}
 		span {
-
+			font-size: 1rem;
+			margin-top: 25px;
 		}
 	}
-	&__cloud {
-		border: @border;
+	&__wind {
+		//border: @border;
 		display: flex;
 		flex-direction: column;
 		align-items: center;
 		margin: 0 23px;
 		i {
-			font-size: 2.5rem;
-			margin-bottom: 30px;
+			font-family: 'icomoon';
+			font-size: 3rem;
 		}
 		span {
-
+			font-size: 1rem;
+			margin-top: 25px;
 		}
 	}
-	&__snow {
-		border: @border;
+	&__mountain {
+		//border: @border;
 		display: flex;
 		flex-direction: column;
 		align-items: center;
 		margin: 0 23px;
 		i {
-			font-size: 2.5rem;
-			margin-bottom: 30px;
+			font-family: 'icomoon';
+			font-size: 3rem;
 		}
 		span {
-
+			font-size: 1rem;
+			margin-top: 25px;
 		}
 	}
-	&__bolt {
-		border: @border;
+	&__autumn {
+		//border: @border;
 		display: flex;
 		flex-direction: column;
 		align-items: center;
 		margin: 0 23px;
 		i {
-			font-size: 2.5rem;
-			margin-bottom: 30px;
+			font-family: 'icomoon';
+			font-size: 3rem;
 		}
 		span {
-
+			font-size: 1rem;
+			margin-top: 25px;
 		}
 	}
 	&__about {
 		height: 200px;
-		border: @border;
-		margin-top: 50px;
+		//border: @border;
+		margin-top: 70px;
+		display: flex;
+		justify-content: center;
+	}
+	&__textone {
+		//border: @border;
+		height: 100%;
+		width: 17%;
+		h2 {
+			font-size: 1.4rem;
+			font-family: 'Play', sans-serif;
+
+			padding: 15px 15px;
+			text-align: right;
+		}
+	}
+	&__texttoo {
+		//border: @border;
+		height: 100%;
+		width: 17%;
+		h2 {
+			font-size: 1rem;
+			font-family: 'Russo One', sans-serif;
+			color: #9c9c9c;
+			padding: 15px 15px;
+		}
+	}
+	&__textthree {
+		//border: @border;
+		height: 100%;
+		width: 17%;
+		h2 {
+			font-size: 1rem;
+			font-family: 'Russo One', sans-serif;
+			color: #9c9c9c;
+			padding: 15px 15px;
+		}
 	}
 
 }
