--- a/src/less/fonts.less
+++ b/src/less/fonts.less
@@ -1,14 +1,20 @@
 
 @font-face {
 	font-family: 'Russo One', sans-serif;
-	src: url('./fonts/RussoOne-Regular.ttf');
+	src: url('../fonts/RussoOne-Regular.ttf');
 }
 
 
 @font-face {
 	font-family: 'Orbitron', sans-serif;
-	src: url('./fonts/Orbitron-Medium.ttf');
+	src: url('../fonts/Orbitron-Medium.ttf');
 }
+
+@font-face {
+	font-family: 'Play', sans-serif;
+	src: url('../fonts/Play-Bold.ttf');
+}
+
 
 
 @font-face {
