--- a/src/less/style.less
+++ b/src/less/style.less
@@ -16,7 +16,7 @@ body {
 	background: @whitebkg;
 }
 
-//FIRST SCREEN START
+//FIRST CONTAINER START
 .firstContainer {
 	background-color: @graybkg;
 	//border: @border;
@@ -34,11 +34,11 @@ body {
 		}
 	}
 }
-//FIRST SCREEN END
+//FIRST CONTAINER END
 
 
 
-//SECOND SCREEN START
+//SECOND CONTAINER START
 .secondContainer {
 	height: 300px;
 	&__wrap {
@@ -196,5 +196,37 @@ body {
 	}
 
 }
-//SECOND SCREEN END
+//SECOND CONTAINER END
+
+
+
+//THIRD CONTAINER START
+
+.thirdContainer {
+	background-color: @graybkg;
+	//border: @border;
+	-webkit-clip-path: polygon(0 18%, 100% 0, 100% 82%, 0 100%);
+	clip-path: polygon(0 18%, 100% 0, 100% 82%, 0 100%);
+	height: 700px;
+	margin-top: 500px;
+	z-index: -20;
+	&__wrap {
+		border: @border;
+		display: flex;
+		justify-content: center;
+		height: 200px;
+		z-index: 20;
+	}
+	&__headline {
+		border: @border;
+		z-index: 20;
+		margin-top: 50px;
+		h1 {
+			font-size: 3rem;
+			z-index: 20;
+		}
+	}
+}
+
+//THIRD CONTAINER END
 
