--- a/src/less/fonts.less
+++ b/src/less/fonts.less
@@ -14,7 +14,10 @@
 	font-family: 'Play', sans-serif;
 	src: url('../fonts/Play-Bold.ttf');
 }
-
+@font-face {
+	font-family: 'Ubuntu', sans-serif;
+	src: url('../fonts/Ubuntu-Regular.ttf');
+}
 
 
 @font-face {
