--- a/src/less/style.less
+++ b/src/less/style.less
@@ -34,7 +34,7 @@ body {
 		margin: 10px 0 -10px 0;
 		hr {
 			position: relative;
-			left: 12px;
+			left: 22px;
 			background-color: black;
 			height: 1px;
 			width: 25px;
@@ -354,6 +354,7 @@ body {
 				color: @turquoise;
 				display: inline-block;
 				font-weight: bold;
+				padding: 0 5px;
 			}
 		}
 	}
