--- a/src/less/style.less
+++ b/src/less/style.less
@@ -192,7 +192,7 @@ body {
 		}
 	}
 	&__about {
-		border: @border;
+		//border: @border;
 		display: flex;
 		//.row-flex();
 		.size(12);
@@ -206,6 +206,7 @@ body {
 		//width: 17%;
 		//.row-flex();
 		.size(3);
+		.size-xl(4);
 		.size-md(4);
 		h2 {
 			font-size: 1.4rem;
@@ -223,6 +224,7 @@ body {
 		//.row-flex();
 		display: flex;
 		.size(3);
+		.size-xl(4);
 		.size-md(4);
 		h2 {
 			font-size: 1rem;
@@ -240,6 +242,7 @@ body {
 		//.row-flex();
 		display: flex;
 		.size(3);
+		.size-xl(4);
 		.size-md(4);
 		h2 {
 			font-size: 1rem;
