--- a/src/less/style.less
+++ b/src/less/style.less
@@ -33,6 +33,9 @@ body {
 		height: 100%;
 		width: 100%;
 		margin: 10px 0 -10px 0;
+			.lg-block({
+				margin: 10px 0 -17px 0;
+			});
 		hr {
 			position: relative;
 			left: 22px;
@@ -40,21 +43,22 @@ body {
 			height: 1px;
 			width: 25px;
 			transform: rotate(120deg);
+				.lg-block({
+					width: 15px;
+				});
 		}
 	}
 	&__logo {
 		//border: @border;
 		margin: 10px 0 5px 0;
-		/*
-		img {
-			height: 47px;
-		}
-		*/
 		h1 {
 			font-size: 1.4rem;
 			font-family: 'Ubuntu', sans-serif;
 			letter-spacing: 5px;
 			margin-top: 10px;
+				.lg-block({
+					font-size: 1rem;
+				});
 		}
 	}
 	&__linetwo {
@@ -62,6 +66,9 @@ body {
 		height: 100%;
 		width: 100%;
 		margin: 5px 0 750px 0;
+			.lg-block({
+				margin: -7px 0 750px 0;
+			});
 		hr {
 			position: relative;
 			left: -12px;
@@ -69,6 +76,10 @@ body {
 			height: 1px;
 			width: 25px;
 			transform: rotate(120deg);
+				.lg-block({
+					width: 15px;
+					left: 0px;
+				});
 		}
 	}
 }
@@ -195,37 +206,46 @@ body {
 		//border: @border;
 		display: flex;
 		//.row-flex();
-		.size(12);
-		.size-lg(12);
+		//.size(12);
+		//.size-xl(12);
+		//.size-lg(12);
+		.sm-block({
+			.row-flex();
+		});
 		margin-top: 70px;
 		justify-content: center;
 	}
 	&__textone {
-		border: @border;
+		//border: @border;
 		display: flex;
 		//width: 17%;
 		//.row-flex();
 		.size(3);
 		.size-xl(4);
 		.size-md(4);
+		.size-sm(12);
 		h2 {
 			font-size: 1.4rem;
 			font-family: 'Play', sans-serif;
-			padding: 15px 15px;
+			padding: 15px;
 			text-align: right;
 			.lg-block({
 				font-size: 1rem;
 			});
+			.sm-block({
+				text-align: center;
+			});
 		}
 	}
 	&__texttoo {
-		border: @border;
+		//border: @border;
 		//width: 17%;
 		//.row-flex();
 		display: flex;
 		.size(3);
 		.size-xl(4);
 		.size-md(4);
+		.size-sm(12);
 		h2 {
 			font-size: 1rem;
 			font-family: 'Russo One', sans-serif;
@@ -234,16 +254,20 @@ body {
 			.lg-block({
 				font-size: 0.8rem;
 			});
+			.sm-block({
+				text-align: center;
+			});
 		}
 	}
 	&__textthree {
-		border: @border;
+		//border: @border;
 		//width: 17%;
 		//.row-flex();
 		display: flex;
 		.size(3);
 		.size-xl(4);
 		.size-md(4);
+		.size-sm(12);
 		h2 {
 			font-size: 1rem;
 			font-family: 'Russo One', sans-serif;
@@ -251,6 +275,9 @@ body {
 			padding: 15px 15px;
 			.lg-block({
 				font-size: 0.8rem;
+			});
+			.sm-block({
+				text-align: center;
 			});
 		}
 	}
