--- a/src/less/style.less
+++ b/src/less/style.less
@@ -11,6 +11,31 @@
 	.wrapper();
 }
 
+// миксин для блока с иконками start
+.iconmixin {
+	i {
+		font-family: 'icomoon';
+		font-size: 3rem;
+		transition: @transition;
+		.lg-block({
+			font-size: 2.5rem;
+			transition: @transition;
+		});
+	}
+	span {
+		font-size: 1rem;
+		margin-top: 25px;
+		text-align: center;
+		transition: @transition;
+		.lg-block({
+			font-size: 0.8rem;
+			margin-top: 15px;
+			transition: @transition;
+		});
+	}
+}
+// миксин для блока с иконками end
+
 
 body {
 	background: @whitebkg;
@@ -135,6 +160,19 @@ body {
 			font-family: 'Russo One', sans-serif;
 			margin-top: 25px;
 			letter-spacing: @let-space;
+			transition: @transition;
+				.lg-block({
+					font-size: 2rem;
+					transition: @transition;
+					letter-spacing: 5px;
+					margin-top: 15px;
+				});
+				.xs-block({
+					transition: @transition;
+					letter-spacing: 1px;
+					font-size: 1.5rem;
+					margin-top: -25px;
+				});
 		}
 	}
 	&__line {
@@ -143,6 +181,17 @@ body {
 			height: 3px;
 			width: 90px;
 			margin-top: 60px;
+			transition: @transition;
+				.lg-block({
+					width: 75px;
+					margin-top: 40px;
+					transition: @transition;
+				});
+				.xs-block({
+					width: 40px;
+					height: 2px;
+					margin-top: 25px;
+				});
 		}
 	}
 	&__icons {
@@ -151,6 +200,14 @@ body {
 		justify-content: center;
 		margin-top: 100px;
 		font-family: 'Orbitron', sans-serif;
+		transition: @transition;
+			.lg-block({
+				margin-top: 50px;
+				transition: @transition;
+			});
+			.md-block({
+				.row-flex();
+			});
 	}
 	&__tree {
 		//border: @border;
@@ -158,15 +215,12 @@ body {
 		flex-direction: column;
 		align-items: center;
 		margin: 0 23px;
-		i {
-			font-family: 'icomoon';
-			font-size: 3rem;
-		}
-		span {
-			font-size: 1rem;
-			margin-top: 25px;
-		}
-
+		transition: @transition;
+		.iconmixin();
+		.md-block({
+			margin: 12px 23px;
+			transition: @transition;
+		});
 	}
 	&__water {
 		//border: @border;
@@ -174,14 +228,12 @@ body {
 		flex-direction: column;
 		align-items: center;
 		margin: 0 23px;
-		i {
-			font-family: 'icomoon';
-			font-size: 3rem;
-		}
-		span {
-			font-size: 1rem;
-			margin-top: 25px;
-		}
+		transition: @transition;
+		.iconmixin();
+		.md-block({
+			margin: 12px 23px;
+			transition: @transition;
+		});
 	}
 	&__wind {
 		//border: @border;
@@ -189,14 +241,12 @@ body {
 		flex-direction: column;
 		align-items: center;
 		margin: 0 23px;
-		i {
-			font-family: 'icomoon';
-			font-size: 3rem;
-		}
-		span {
-			font-size: 1rem;
-			margin-top: 25px;
-		}
+		transition: @transition;
+		.iconmixin();
+		.md-block({
+			margin: 12px 23px;
+			transition: @transition;
+		});
 	}
 	&__mountain {
 		//border: @border;
@@ -204,14 +254,12 @@ body {
 		flex-direction: column;
 		align-items: center;
 		margin: 0 23px;
-		i {
-			font-family: 'icomoon';
-			font-size: 3rem;
-		}
-		span {
-			font-size: 1rem;
-			margin-top: 25px;
-		}
+		transition: @transition;
+		.iconmixin();
+		.md-block({
+			margin: 12px 23px;
+			transition: @transition;
+		});
 	}
 	&__autumn {
 		//border: @border;
@@ -219,22 +267,16 @@ body {
 		flex-direction: column;
 		align-items: center;
 		margin: 0 23px;
-		i {
-			font-family: 'icomoon';
-			font-size: 3rem;
-		}
-		span {
-			font-size: 1rem;
-			margin-top: 25px;
-		}
+		transition: @transition;
+		.iconmixin();
+		.md-block({
+			margin: 12px 23px;
+			transition: @transition;
+		});
 	}
 	&__about {
 		//border: @border;
 		display: flex;
-		//.row-flex();
-		//.size(12);
-		//.size-xl(12);
-		//.size-lg(12);
 		.sm-block({
 			.row-flex();
 		});
@@ -244,8 +286,6 @@ body {
 	&__textone {
 		//border: @border;
 		display: flex;
-		//width: 17%;
-		//.row-flex();
 		.size(3);
 		.size-xl(4);
 		.size-md(4);
@@ -255,11 +295,14 @@ body {
 			font-family: 'Play', sans-serif;
 			padding: 15px;
 			text-align: right;
+			transition: @transition;
 			.lg-block({
 				font-size: 1rem;
+				transition: @transition;
 			});
 			.sm-block({
 				text-align: center;
+				//transition: @transition;
 			});
 		}
 	}
@@ -277,11 +320,14 @@ body {
 			font-family: 'Russo One', sans-serif;
 			color: #9c9c9c;
 			padding: 15px 15px;
+			transition: @transition;
 			.lg-block({
 				font-size: 0.8rem;
+				transition: @transition;
 			});
 			.sm-block({
 				text-align: center;
+				//transition: @transition;
 			});
 		}
 	}
@@ -299,11 +345,14 @@ body {
 			font-family: 'Russo One', sans-serif;
 			color: #9c9c9c;
 			padding: 15px 15px;
+			transition: @transition;
 			.lg-block({
 				font-size: 0.8rem;
+				transition: @transition;
 			});
 			.sm-block({
 				text-align: center;
+				//transition: @transition;
 			});
 		}
 	}
@@ -319,6 +368,19 @@ body {
 			position: absolute;
 			z-index: 5;
 			letter-spacing: @let-space;
+			transition: @transition;
+				.lg-block({
+					font-size: 2.5rem;
+					transition: @transition;
+				});
+				.md-block({
+					font-size: 2rem;
+					transition: @transition;
+				});
+				.sm-block({
+					font-size: 1.5rem;
+					transition: @transition;
+				});
 		}
 	}
 
